--- a/content/entries/20240916164901.md
+++ b/content/entries/20240916164901.md
@@ -23,4 +23,6 @@ along.
 
 - [Github Status Page](https://www.githubstatus.com/)
 
-Last I checked it was just Actions that was having problems.
+Last I checked it was just Actions that was having problems. Kind of
+defeats the purpose to report this on something hosted on Github Pages.
+But... suprise. If this gets to anyone.
