update to journal and new post.

--- a/content/entries/20240916164901.md
+++ b/content/entries/20240916164901.md
@@ -1,6 +1,7 @@
 ---
 title: 'Entry 09-16-2024'
 date: 2024-09-16T16:49:01+06:00
+summary: "Journal entry 09-16-2024"
 draft: false
 hidden: false
 externalURL: false
@@ -9,9 +10,10 @@ showModDate: true
 showReadingTime: true
 showTags: true
 showPagination: true
+tags: "journal"
 ---
 
-#### 16:55
+### 16:55
 
 Picked a good time to deploy a new website to Github Pages. At this
 time Github is experiencing service degredation on their Actions and
@@ -26,3 +28,10 @@ along.
 Last I checked it was just Actions that was having problems. Kind of
 defeats the purpose to report this on something hosted on Github Pages.
 But... suprise. If this gets to anyone.
+
+### 23:38
+
+ChatGPT has a bad reputation. But, it can be useful should you need 
+project ideas. In the grand scheme of things you can utilize it to 
+simulate developer / customer interaction. It tells you what it expects.
+Which is nice if you're ever in a slump and need to pad that portfolio.
