--- a/content/notes/20240916231001.md
+++ b/content/notes/20240916231001.md
@@ -10,7 +10,7 @@ showModDate: true
 showReadingTime: true
 showTags: true
 showPagination: true
-tags: "networking"
+tags: ["networking"]
 ---
 
 ## Summary
