--- a/content/entries/20240916164901.md
+++ b/content/entries/20240916164901.md
@@ -10,7 +10,7 @@ showModDate: true
 showReadingTime: true
 showTags: true
 showPagination: true
-tags: "journal"
+tags: ["journal"]
 ---
 
 ### 16:55
