--- a/content/notes/20240916231001.md
+++ b/content/notes/20240916231001.md
@@ -1,5 +1,5 @@
 ---
-title: 'Enter Port Range Promp On Cisco IOS'
+title: 'Configure Multiple Interfaces On Cisco IOS'
 date: 2024-09-16T16:49:01+06:00
 summary: "Discuss how we can configure multiple Cisco IOS ports with the interface range command."
 draft: false
