--- a/content/notes/20240916231001.md
+++ b/content/notes/20240916231001.md
@@ -1,7 +1,7 @@
 ---
 title: 'Configure Multiple Interfaces On Cisco IOS'
 date: 2024-09-16T16:49:01+06:00
-summary: "Discuss how we can configure multiple Cisco IOS ports with the interface range command."
+summary: "Discuss how to configure multiple Cisco IOS ports with the interface range command."
 draft: false
 hidden: false
 externalURL: false
