Adding some more old posts and working through some docker stuff.

--- a/content/entries/20190730235517.md
+++ b/content/entries/20190730235517.md
@@ -1,5 +1,5 @@
 ---
-title: 'Site Updates'
+title: '07-30-2019 - Site Updates'
 date: 2019-07-30T23:55:17+06:00
 summary: "Notes on site updates."
 draft: false
