correcting mistake and adding a note.

--- a/content/notes/20240222164901.md
+++ b/content/notes/20240222164901.md
@@ -58,7 +58,7 @@ interface range gigabitEthernet 1/0/3 - 10
 The new prompt will look something like the following.
 
 ```sh
-Switch(config-if)#
+Switch(config-if-range)#
 ```
 
 Then I proceeded to configure the ports on the switch as needed.
