--- a/content/notes/20240919100001.md
+++ b/content/notes/20240919100001.md
@@ -30,8 +30,8 @@ Manager and there was a splat on the touchpad driver. The computer
 needed updates so I decided to update it to see if that would fix it.
 But, it did not.
 
-Then I tried to update the driver itself through Windows Update and that
-didn't work.
+Then I tried to update the driver through Windows Update and that didn't 
+work.
 
 Eventually I got tired of using the keyboard to navigate everything. So,
 I get a wired mouse. Mouse pointer popped up just fine. Which ruled out
