--- a/content/projects/vulnhub/20200904230330.md
+++ b/content/projects/vulnhub/20200904230330.md
@@ -34,12 +34,13 @@ This works better with VirtualBox rather than VMware.
 
 Below is a link to the Vulnhub machine.
 
-- [PWNED: 1]()
+- [PWNED: 1](https://www.vulnhub.com/entry/pwned-1,507/)
 
 # Enumeration
 ---
 
 Started out with enumerating services on the VM with an Nmap scan. Looks like the server is hosting an FTP and web server. SSH is available on the VM as well. Looks like this is a Debian/Ubuntu box.
+
 ```sh
 nmap -sS -A -p- -O -sV 192.168.56.101
 ```
