--- a/content/notes/20230717085626.md
+++ b/content/notes/20230717085626.md
@@ -10,7 +10,7 @@ showModDate: true
 showReadingTime: true
 showTags: true
 showPagination: true
-tags: ["netadin"]
+tags: ["netadmin"]
 ---
 
 On FortiGate firewalls with 802.1Q VLAN interfaces. The DMZ role can be assigned to the interface. But, with this also comes a cavet. If this DMZ needs to have a DHCP server. It cant be configured through the web interface. So, it needs to be configured using the command line. Here I explore how to do do this.
