--- a/content/notes/20240401112801.md
+++ b/content/notes/20240401112801.md
@@ -10,7 +10,7 @@ showModDate: true
 showReadingTime: true
 showTags: true
 showPagination: true
-tags: ["network", "code"]
+tags: ["netadmin", "code"]
 ---
 
 ## Summary
