--- a/content/notes/20240409144401.md
+++ b/content/notes/20240409144401.md
@@ -10,7 +10,7 @@ showModDate: true
 showReadingTime: true
 showTags: true
 showPagination: true
-tags: ["netadin"]
+tags: ["netadmin"]
 ---
 
 The following command will filter ports 67 and 68 on the specified 
