--- a/content/notes/20231213105846.md
+++ b/content/notes/20231213105846.md
@@ -20,7 +20,7 @@ So… I noticed in this post I didn’t provide the step that comes BEFORE confi
 
 Post can be found below:
 
-- [FortiGate: Adding A DHCP Server To A VLAN Interface With The DMZ Role](https://notes.n3s0.tech/posts/20230717085626/)
+- [FortiGate: Adding A DHCP Server To A VLAN Interface With The DMZ Role](https://n3s0.tech/posts/20230717085626/)
 
 On FortiGate firewalls with 802.1Q VLAN interfaces. The DMZ role can be assigned to the interface. What this does is help condense an interface for use with multiple subnets. Allowing for more available ports.
 
