--- a/content/notes/20240919100001.md
+++ b/content/notes/20240919100001.md
@@ -9,6 +9,7 @@ showDate: true
 showModDate: true
 showReadingTime: true
 showTags: true
+showComments: true
 showPagination: true
 tags: ["sysadmin", "windows 11"]
 ---
