--- a/content/notes/20190418041617.md
+++ b/content/notes/20190418041617.md
@@ -1,5 +1,5 @@
 ---
-title: 'Install & Watch Binary Defense's Artillery Work In A Azure Ubuntu VM'
+title: "Install & Watch Binary Defense's Artillery Work In A Azure Ubuntu VM"
 date: 2019-04-18T04:16:17-06:00
 summary: "Notes for installing and configuring Binary Defense's Honeypot Artillery on an Azure Ubuntu VM. I also review how it works a little at the end of the post."
 draft: false
