--- a/content/entries/20240924.md
+++ b/content/entries/20240924.md
@@ -44,3 +44,23 @@ for BFD are transmit/detechtion intervals. Bidirectional Forwarding Detection
 
 Maybe this will be useful in the future. It's useful for failover that's for 
 sure.
+
+## 22:47
+---
+
+I'm considering branching out a little more as a netadmin. A majority of my experience is with vSphere vSwitching, Fortinet FortiGates, FortiSwitches, FortiAPs, Cisco Switches, OPNSense, pfsense, pf, etc. Mostly on-premises gear.
+
+In fact. A majority of my work this week has been focused on wireless troubleshooting and tuning. So expect some stories and TIL stuff on that in the future. 
+
+I normally don't touch cloud networking or container networking at all. So I think I should focus on learning and labbing on some of the common cloud platforms. Like Azure, AWS, Google Cloud, and Vultr sound like good places to start. 
+
+Another good place to start for container networking would probably be docker, podman, keuberbetes, containerd, etc.
+
+If I'm being honest. I'll probably dirct more toward cloud networking because I've seen cloud solutions given more use. I also plan on refreshing the basics as well.
+
+During some reflection I've noticed that I'll need to dial in a little more on BGP troubleshooting and setup. Expect some articles on BGP and other routing protocols in the future. I'll expect some RFC reading out of myself. 
+
+## 23:07
+---
+
+One thing I'm going to work through is researching a little more on tuning SMBv3 Linux clients/servers. Just to see what options there are to make it more performant.
