--- a/content/entries/20240924.md
+++ b/content/entries/20240924.md
@@ -64,3 +64,13 @@ During some reflection I've noticed that I'll need to dial in a little more on B
 ---
 
 One thing I'm going to work through is researching a little more on tuning SMBv3 Linux clients/servers. Just to see what options there are to make it more performant.
+
+## 23:19
+---
+
+Learned today that on smart phones you can press and hold the space bar to move the cursor in text fields. It definately works on one of my Samsung S24. I've only just recently learned about it and it's been a life saver. No more struggling with using my finger on the cursor to move the cursor. The more you know. 
+
+## 23:24
+---
+
+Learned today that on some vehicle models the manufacturer is nice enough to put the part number for what looks to be the bulbs on the headlights at least. Need to confirm this for me personally. But, this could save me some time if I ever need to change out another bulb. Thanks Mike!
