--- a/content/entries/20240924.md
+++ b/content/entries/20240924.md
@@ -74,3 +74,12 @@ Learned today that on smart phones you can press and hold the space bar to move 
 ---
 
 Learned today that on some vehicle models the manufacturer is nice enough to put the part number for what looks to be the bulbs on the headlights at least. Need to confirm this for me personally. But, this could save me some time if I ever need to change out another bulb. Thanks Mike!
+
+## 23:52
+---
+
+I've been reading a little bit and I'm considering writting a simple dead man's switch. I don't forsee anything happening in the near future. But, if something did. It might come of use some day. Dead Man Switches are mechanisms that send something out if you don't check in with it. Be that information, a message, etc. When you check in with it. The application will reset the seconds counter. Pushover and email warnings sound like a good idea too. Should be a fun coding project. 
+
+I read an article from someone who made one in Rust. But, I think I'll build mine in Go. Then maybe Rust. Here is an article of someone's setup for one. 
+
+- [Sherlock Holmes Final Letter: A Simple Dead Man's Switch in Rust](https://storopoli.io/2024-03-23-dead-man-switch/)
