--- a/content/notes/20210413131817.md
+++ b/content/notes/20210413131817.md
@@ -13,7 +13,7 @@ showPagination: true
 tags: ["infosec"]
 ---
 
-## Overview
+## Summary
 ---
 
 Old but gold way for getting into workstations in any sense. Haven’t needed to use it. But, decided to try it. Now its time to document.
