--- a/content/notes/20240226161912.md
+++ b/content/notes/20240226161912.md
@@ -1,7 +1,7 @@
 ---
 title: "FortiGate: Configuring Fabric Automation For Service Restarts"
 date: 2024-02-26T09:12:09-05:00
-description: "Some notes on Fabric Automation for restarting services on Fortigate Firewalls."
+summary: "Some notes on Fabric Automation for restarting services on Fortigate Firewalls."
 draft: false
 tags: [ "networking", "fortigate" ]
 type: post
