--- a/content/notes/20240403094402.md
+++ b/content/notes/20240403094402.md
@@ -13,8 +13,15 @@ showPagination: true
 tags: ["dbadmin"]
 ---
 
+## Summary
+---
+
 Making a quick post about viewing grants in MySQL. This can be useful if
 you ever need to review or briefly audit access for users in MySQL.
+
+## Showing GRANTS
+---
+
 Below is a general syntax for reviewing permissions for a specific user
 on a specific host.
 
