--- a/content/notes/20230727111114.md
+++ b/content/notes/20230727111114.md
@@ -1,11 +1,16 @@
 ---
 title: "FortiGate: Appending An Address To An Address Group CLI"
 date: 2023-07-27T11:11:14-06:00
-description: "Appending addresses to address groups in FortiOS CLI."
+summary: "Appending addresses to address groups in FortiOS CLI."
 draft: false
-tags: [ "network" ]
-type: post
-showTableOfContents: true
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["netadmin"]
 ---
 
 In another post I went over how to create an address group in FortiOS
