--- a/content/notes/20231013092216.md
+++ b/content/notes/20231013092216.md
@@ -3,8 +3,14 @@ title: "Using The IISRESET Command To Reset IIS & Obtain Its Status"
 date: 2023-10-13T09:22:16-05:00
 description: "Some notes for restarting the IIS services using CMD commands."
 draft: false
-tags: [ "iis", "windows"  ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["sysadmin"]
 ---
 
 Some brief notes on how to reset Internet Information Services (IIS)
