--- a/content/notes/20231013110544.md
+++ b/content/notes/20231013110544.md
@@ -1,11 +1,20 @@
 ---
 title: "Deploying Your Hugo Blog Development Server Using Podman/Docker Compose"
 date: 2023-10-13T11:05:44-05:00
-description: "Some workflow updates for the blog. A simple Hugo Podman/Docker container for writting content with docker/podman-compose."
+summary: "Some workflow updates for the blog. A simple Hugo Podman/Docker container for writting content with docker/podman-compose."
 draft: false
-tags: [ "general", "hugo", "podman", "docker" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["devops", "containers"]
 ---
+
+Note that this container imagedeploys an old version of hugo and it may
+not be suitable for all deployments.
 
 Thought that I'd play a little bit with the workflow of this site.
 Perhaps it will be useful to others. Although installing Hugo extended
