--- a/content/notes/20231017113135.md
+++ b/content/notes/20231017113135.md
@@ -1,10 +1,16 @@
 ---
 title: "Starting A New Jekyll Site Using The Jekyll Container Image"
 date: 2023-10-17T11:31:35-05:00
-description: "Some workflow updates for the blog. A simple Hugo Podman/Docker container for writting content with docker/podman-compose."
-draft: true
-tags: [ "jekyll", "podman", "docker" ]
-type: post
+summary: "Some workflow updates for the blog. A simple Hugo Podman/Docker container for writting content with docker/podman-compose."
+draft: false
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["devops", "containers"]
 ---
 
 Some thing I've been playing with a lot lately are container images. The
