--- a/content/notes/20231101111740.md
+++ b/content/notes/20231101111740.md
@@ -1,10 +1,16 @@
 ---
 title: "Obtaining Support Data For HPE (Brocade) Fiber Channel Switches"
 date: 2023-11-01T11:17:40-05:00
-description: "Notes for obtaining support data for HPE (Brocade) Fiber Channel switches."
-draft: true
-tags: [ "networking" ]
-type: post
+summary: "Notes for obtaining support data for HPE (Brocade) Fiber Channel switches."
+draft: false
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["netadmin"]
 ---
 
 Providing some notes for submitting data to HPE using the supportsave
@@ -18,8 +24,28 @@ needed and send it to whatever IP address you send to. But, to make
 things easier. With an open support case they'll provide the credentials
 for sending the information.
 
+Below is the prompt that shows after SSH login.
+
 ```sh
-lab-fcsw-01:admin> supportsave
+lab-fcsw-01:admin>
+```
+
+Enter the following command into the prompt.
+
+```sh
+supportsave
+```
+
+Follow a similar process as follows. This will pull all of the necessary
+information support needs. One thing to note is if HPE provided credentials
+to a SFTP or SSH server to push the files to. That server can be used.
+
+If your environent is extensively filtered on your network management 
+VLAN. Allowing traffic to this may be useful. If this is too much work.
+Just upload to a local server, pull the data via scp/sftp, and then 
+provide the information to support. 
+
+```sh
 This command collects RASLOG, TRACE, supportShow, core file, FFDC data
 and then transfer them to a FTP/SCP/SFTP server or a USB device.
 This operation can take several minutes.
