--- a/content/notes/20231101113513.md
+++ b/content/notes/20231101113513.md
@@ -1,15 +1,23 @@
 ---
 title: "Fortinet: Some Troubleshooting Tid-bits"
 date: 2023-11-01T11:17:40-05:00
-description: "Notes for troubleshooting Fortigate firewalls."
+summary: "Notes for troubleshooting Fortigate firewalls."
 draft: true
-tags: [ "networking" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["netadmin"]
 ---
 
 ```sh
 diagnose hardware sysinfo memory
 ```
+
+This command will 
 
 ```sh
 diagnose system top
