--- a/content/notes/20231101115433.md
+++ b/content/notes/20231101115433.md
@@ -1,10 +1,16 @@
 ---
 title: "Migrating VMware vSphere VMs To Another Cluster Using Veeam Backup & Replication"
 date: 2023-11-01T11:54:33-05:00
-description: "My notes for migrating one vSphere VM to another cluster."
-draft: true
-tags: [ "" ]
-type: post
+summary: "My notes for migrating one vSphere VM to another cluster."
+draft: false
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["sysadmin"]
 ---
 
 This is well documented by Veeam. But, I recently used this and I wanted
