--- a/content/notes/20231116111640.md
+++ b/content/notes/20231116111640.md
@@ -1,10 +1,16 @@
 ---
 title: "Converting VMware Disks From Thick Provisioning to Thin Provisioning"
 date: 2023-11-16T11:16:40-05:00
-description: "Notes for deploying Netbox using Docker Compose or Podman Compose."
-draft: true
-tags: [ "" ]
-type: post
+summary: "Notes for deploying Netbox using Docker Compose or Podman Compose."
+draft: false
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["sysadmin"]
 ---
 
 ## Reference
