--- a/content/notes/20240226091209.md
+++ b/content/notes/20240226091209.md
@@ -1,10 +1,16 @@
 ---
 title: "Moving MySQL Server To A Custom Directory On Ubuntu Linux"
 date: 2024-02-26T09:12:09-05:00
-description: "Notes for moving MySQL to a different directory on Ubuntu."
+summary: "Notes for moving MySQL to a different directory on Ubuntu."
 draft: false
-tags: [ "linux", "database", "db admin", "mysql" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["dbadmin"]
 ---
 
 Here we will discuss the process of moving MySQL to another directory on
