--- a/content/notes/20240226160345.md
+++ b/content/notes/20240226160345.md
@@ -1,10 +1,16 @@
 ---
 title: "FortiGate: Configuring Auto-Scripts"
 date: 2024-02-26T09:12:09-05:00
-description: "Configuring auto scripts."
+summary: "Configuring auto scripts."
 draft: false
-tags: [ "networking", "fortigate" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["netadmin"]
 ---
 
 Below is the auto script.
