--- a/content/notes/20240226161912.md
+++ b/content/notes/20240226161912.md
@@ -3,12 +3,18 @@ title: "FortiGate: Configuring Fabric Automation For Service Restarts"
 date: 2024-02-26T09:12:09-05:00
 summary: "Some notes on Fabric Automation for restarting services on Fortigate Firewalls."
 draft: false
-tags: [ "networking", "fortigate" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["netadmin"]
 ---
 
 
-```
+```sh
 config system automation-trigger
     edit "Daily Service Restart Schedule"
         set trigger-type scheduled
@@ -18,7 +24,7 @@ config system automation-trigger
 end
 ```
 
-```
+```sh
 config system automation-action
     edit "Restart WAD Service"
         set description "Restarts the WAD service"
@@ -29,7 +35,7 @@ config system automation-action
 end
 ```
 
-```
+```sh
 config system automation-action
     edit "Restart IPS Monitor Service"
         set description "Restarts IPS Monitor service"
@@ -40,7 +46,7 @@ config system automation-action
 end
 ```
 
-```
+```sh
 config system automation-stitch
     edit "Daily Service Restart"
         set description "Restarts the WAD service daily on the firewall."
