--- a/content/notes/20240228093405.md
+++ b/content/notes/20240228093405.md
@@ -1,10 +1,16 @@
 ---
 title: "Moving PostgresSQL 15 To Custom Directory On Ubuntu Server"
 date: 2024-02-28T09:34:05-05:00
-description: "Notes for moving PostgresSQL 15 on Ubuntu Server to a custom directory."
+summary: "Notes for moving PostgresSQL 15 on Ubuntu Server to a custom directory."
 draft: false
-tags: [ "db admin", "postgresql", "database" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["sysadmin"]
 ---
 
 ## Summary
