--- a/content/notes/20240308111100.md
+++ b/content/notes/20240308111100.md
@@ -3,8 +3,14 @@ title: "Planning The Specs For A Small MySQL Database Administrator Lab"
 date: 2024-03-08T11:11:00-05:00
 description: "Notes for planning out the specifications for a small MySQL Database Administrator lab."
 draft: false
-tags: [ "mysql", "sql", "database administration" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["dbadmin"]
 ---
 
 This is the first revision for the virtual machine specifications of a
