--- a/content/notes/20240327082001.md
+++ b/content/notes/20240327082001.md
@@ -1,10 +1,16 @@
 ---
 title: "Railway Management System - MK 1"
 date: 2024-03-09T10:33:00-05:00
-description: "A little database design project I will be working on."
-draft: true
-tags: [ "Database Design" ]
-type: post
+summary: "A little database design project I will be working on."
+draft: false
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["dev"]
 ---
 
 ## Overview
