--- a/content/notes/20240328121801.md
+++ b/content/notes/20240328121801.md
@@ -96,7 +96,7 @@ net_connect.disconnect()
 ```
 
 There are plenty of other use cases for this. I'll be posting one for
-doing this with a batch of switches [here](/posts/20240401112801/) for example. I was just
-providing the simplest example I could. Another idea after posting the
-batch configuration update is configuration backup of all of the gear in
-batches. Coming soon.
+doing this with a batch of switches [here](/posts/20240401112801/) for 
+example. I was just providing the simplest example I could. Another idea 
+after posting the batch configuration update is configuration backup of 
+all of the gear in batches. Coming soon.
