--- a/content/notes/20240328122002.md
+++ b/content/notes/20240328122002.md
@@ -1,10 +1,19 @@
 ---
 title: "Ubuntu Linux Crisis & General Troubleshooting Tools"
 date: 2024-03-28T12:20:02-05:00
-description: "List of tools used for troubleshooting."
+summary: "List of tools used for troubleshooting."
 draft: false
-tags: [ "linux", "troubleshooting" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["netadmin", "code"]
+---
+
+## Summary
 ---
 
 Thought I'd put together a list of Linux tools based on different
@@ -18,6 +27,7 @@ updated regularly as time goes on. Included will be the command used to
 install the packages listed in this.
 
 ## Crisis
+---
 
 | Package | Provides | Notes |
 |--------|----------|--------|
@@ -32,12 +42,14 @@ install the packages listed in this.
 | mtr | mtr(8) | net diagnostics |
 
 ## General
+---
 
 | Package | Provides | Notes |
 |---------|----------|-------|
 | curl | curl(1) | data transfer |
 
 ## Install
+---
 
 Command for installing these packages on Ubuntu. Some come with Ubuntu
 Server by default and some dont. This just makes sure they are and takes
@@ -50,5 +62,6 @@ nicstat ethtool iproute2 curl cpuid
 ```
 
 ## Reference
+---
 
 - [Linux Crisis Tools](https://www.brendangregg.com/blog/2024-03-24/linux-crisis-tools.html)
