--- a/content/notes/20240401112801.md
+++ b/content/notes/20240401112801.md
@@ -16,24 +16,30 @@ tags: ["netadmin", "code"]
 ## Summary
 ---
 
-Wrote another script. This one is useful should there be any batch configuration tasks needed on switches. Definately useful when you need to add a VLAN for multiple devices.
+Wrote another script. This one is useful should there be any batch 
+configuration tasks needed on switches. Definately useful when you need 
+to add a VLAN for multiple devices.
 
-I will be putting the link for this script found in one of my respositories below.
+I will be putting the link for this script found in one of my 
+respositories below.
 
 n3s0/scripts/cisco_add_vlan_batch.py - Dead Link
 
-This script has a list of multiple devices and their connection details. These are lab devices.
+This script has a list of multiple devices and their connection details. 
+These are lab devices.
 
 A little more about what the script does.
 
 1. Connects to the Cisco device via SSH using the configuration.
 2. Get a list of the current VLANs before the work starts.
 3. Obtains output of the switches current running configuration.
-4. Runs the commands found in the vlan_commands list. In this case it will create VLAN 10 and give it the name net-mgmt.
+4. Runs the commands found in the vlan_commands list. In this case it 
+   will create VLAN 10 and give it the name net-mgmt.
 5. Gets a list after the work is completed so there’s confirmation.
 6. Saves the running-config to the startup-config.
 7. Disconnects from the device.
-8. Moves to the next switch in the list named “devices” until it reaches the end of the list.
+8. Moves to the next switch in the list named “devices” until it 
+   reaches the end of the list.
 
 ```python
 #!/bin/python
@@ -114,6 +120,18 @@ for device in devices:
     net_connect.disconnect()
 ```
 
-This script performed the same operations was the one written previously. Only now it can reach more devices on the network. This script can be used for a lot more then just configuring VLANs with a little modification. The whole point to this is to get familiar with the library so it can be used for bigger and better things down the road.
+This script performed the same operations was the one written 
+previously. Only now it can reach more devices on the network. This 
+script can be used for a lot more then just configuring VLANs with a 
+little modification. The whole point to this is to get familiar with 
+the library so it can be used for bigger and better things down the 
+road.
 
-At some point I’ll write a script that will backup the configuration for multiple switches and diagnostic data. With the This can be useful for initially dropping into an environment for work and you need to cover your bases. My rule of thumb when entering any environment to perform network work is to make sure I backup network configuration before it starts. This isn’t just for CYA though. It’s also good to review the current configuration before making changes so you know what is going on.
+At some point I’ll write a script that will backup the configuration 
+for multiple switches and diagnostic data. With the This can be useful 
+for initially dropping into an environment for work and you need to 
+cover your bases. My rule of thumb when entering any environment to 
+perform network work is to make sure I backup network configuration 
+before it starts. This isn’t just for CYA though. It’s also good to 
+review the current configuration before making changes so you know what 
+is going on.
