--- a/content/notes/20231003094855.md
+++ b/content/notes/20231003094855.md
@@ -1,10 +1,16 @@
 ---
 title: "Listing, Reading, & Decompressing GZip (GNU zip) Files"
 date: 2023-10-03T09:48:55-05:00
-description: "Some Notes for unzipping or decompressing gzip files."
+summary: "Some Notes for unzipping or decompressing gzip files."
 draft: false
-tags: [ "gzip", "linux"  ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["sysadmin"]
 ---
 
 For a little background on GNU zip. GNU zip is a file format and
