--- a/content/notes/20231113144322.md
+++ b/content/notes/20231113144322.md
@@ -1,10 +1,16 @@
 ---
 title: "Backup & Restore MySQL Using MySQL Dump"
 date: 2023-11-13T14:43:22-05:00
-description: "Notes for doing a backup and restore with the mysqldump command."
+summary: "Notes for doing a backup and restore with the mysqldump command."
 draft: false
-tags: [ "" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["sysadmin"]
 ---
 
 Little post because I caught myself looking this up a little more then I
