--- a/content/notes/20231113160317.md
+++ b/content/notes/20231113160317.md
@@ -1,10 +1,16 @@
 ---
 title: "Installing Zabbix Agent 2 on Ubuntu 22.04"
 date: 2023-11-13T16:03:17-05:00
-description: "Notes for installing the Zabbix Agent 2 agent for Zabbix 6.4."
+summary: "Notes for installing the Zabbix Agent 2 agent for Zabbix 6.4."
 draft: false
-tags: [ "" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["sysadmin"]
 ---
 
 This is the current configuration that I needed at the time. Yours may
