--- a/content/notes/20231114081450.md
+++ b/content/notes/20231114081450.md
@@ -1,9 +1,15 @@
 ---
 title: "Deploying Netbox Using Docker Compose/Podman Compose"
 date: 2023-11-14T08:14:50-05:00
-description: "Notes for deploying Netbox using Docker Compose or Podman Compose."
+summary: "Notes for deploying Netbox using Docker Compose or Podman Compose."
 draft: true
-tags: [ "" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["devops"]
 ---
 
