--- a/content/notes/20240228100250.md
+++ b/content/notes/20240228100250.md
@@ -1,27 +1,36 @@
 ---
 title: "Install & Setup PostgresSQL on Ubuntu Server"
 date: 2024-02-28T09:34:05-05:00
-description: "Notes for installing and setting up PostgreSQL on Ubuntu Server"
+summary: "Notes for installing and setting up PostgreSQL on Ubuntu Server"
 draft: false
-tags: [ "db admin", "postgresql", "database" ]
-type: post
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["sysadmin"]
 ---
 
 ## Summary
------------
+---
 
 Noting some installation and setup for PostgreSQL on Ubuntu Server.
+
+## Install
+---
 
 The command for installing the PostgreSQL server package from the repos
 can be found below.
 
-```
+```sh
 sudo apt install postgresql -y
 ```
 
 I will walk through setup soon.
 
 ## Resources
------
+---
 
 - [PostgresSQL 15 Documentation](https://www.postgresql.org/docs/15/index.html)
