--- a/content/notes/20240324180708.md
+++ b/content/notes/20240324180708.md
@@ -2,9 +2,15 @@
 title: "Deploying A MySQL 8.0 InnoDB Cluster"
 date: 2024-03-09T10:33:00-05:00
 description: "A little database design project I will be working on."
-draft: true
-tags: [ "Database Design" ]
-type: post
+draft: false
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["dbadmin"]
 ---
 
 The following packages will need to be installed on all three servers.
