--- a/content/notes/20240919100001.md
+++ b/content/notes/20240919100001.md
@@ -1,7 +1,7 @@
 ---
 title: "You Lost Your Mouse Pointer In Windows 11"
 date: 2024-09-19T14:40:01+06:00
-summary: "Some fun with TCP Dump."
+summary: "Some fun troubleshooting why someone's mouse pointer magically disapeared in Windows 11."
 draft: false
 hidden: false
 externalURL: false
