--- a/content/notes/20240401112801.md
+++ b/content/notes/20240401112801.md
@@ -1,7 +1,7 @@
 ---
 title: "Automate Adding A VLAN To Multiple Cisco Switches"
 date: 2024-04-01T11:28:01+06:00
-summary: "More notes and code while I paly with the Python Netmiko library."
+summary: "More notes and code while I play with the Python Netmiko library."
 draft: false
 hidden: false
 externalURL: false
