--- a/content/projects/phh/20220214181021.md
+++ b/content/projects/phh/20220214181021.md
@@ -1,11 +1,21 @@
 ---
-title: "Community Programming Help: Assignment 1"
+title: "PHH: Assignment 1"
 date: "2022-02-14T18:10:21-05:00"
-description: "Provided assistance related to a students Python programming homework. Provided are my solutions."
+summary: "Assisted a student with their Python programming homework. Provided are my solutions."
 draft: false
-tags: ["python", "homework help"]
-type: post
-showTableOfContents: false
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+invertPagination: true
+showToC: true
+openToC: false
+showComments: false
+showHeadingAnchors: true
+tags: [ "code", "python" ]
 ---
 
 ## Overview
