--- a/content/projects/phh/20220215181036.md
+++ b/content/projects/phh/20220215181036.md
@@ -1,10 +1,21 @@
 ---
-title: "Student Programming Assignments From Reddit: Part 2"
+title: "PHH: Reddit: Assignment 1"
 date: "2022-02-15T18:10:36-05:00"
-description: "Doing random college programming assignments."
-draft: false
-tags: [ "python" ]
-type: post
+summary: "Doing random college programming assignments."
+draft: true
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+invertPagination: true
+showToC: true
+openToC: false
+showComments: false
+showHeadingAnchors: true
+tags: [ "code", "python" ]
 ---
 
 ## Overview
