--- a/content/projects/phh/20220615224028.md
+++ b/content/projects/phh/20220615224028.md
@@ -1,11 +1,21 @@
 ---
-title: "Facebook Help: Python - Project 1 - Even or Odd List Iteration"
+title: "PHH: Facebook: Assignment 1 - Even or Odd List Iteration"
 date: "2022-06-15T22:40:28-05:00"
-description: "Notes from when I provided assistance to someone on Facebook with a small Python project."
-tags: [ "python", "Facebook Code Help" ]
+summary: "Notes from when I provided assistance to someone on Facebook with a small Python project."
 draft: false
-type: post
-showTableOfContents: true
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+invertPagination: true
+showToC: true
+openToC: false
+showComments: false
+showHeadingAnchors: true
+tags: [ "code", "python" ]
 ---
 
 ## Summary
