--- a/content/projects/phh/20220214181021.md
+++ b/content/projects/phh/20220214181021.md
@@ -1,5 +1,5 @@
 ---
-title: "PHH: Assignment 1"
+title: "PHE: Assignment 1"
 date: "2022-02-14T18:10:21-05:00"
 summary: "Assisted a student with their Python programming homework. Provided are my solutions."
 draft: false
