--- a/content/projects/phh/20220215181036.md
+++ b/content/projects/phh/20220215181036.md
@@ -1,5 +1,5 @@
 ---
-title: "PHH: Reddit: Assignment 1"
+title: "PHE: Reddit: Assignment 1"
 date: "2022-02-15T18:10:36-05:00"
 summary: "Doing random college programming assignments."
 draft: true
