--- a/content/projects/phh/20220615224028.md
+++ b/content/projects/phh/20220615224028.md
@@ -1,5 +1,5 @@
 ---
-title: "PHH: Facebook: Assignment 1 - Even or Odd List Iteration"
+title: "PHE: Facebook: Assignment 1 - Even or Odd List Iteration"
 date: "2022-06-15T22:40:28-05:00"
 summary: "Notes from when I provided assistance to someone on Facebook with a small Python project."
 draft: false
