starting arch setup walkthrough

--- a/content/notes/20241016221601.md
+++ b/content/notes/20241016221601.md
@@ -29,4 +29,48 @@ some explaination as to why I install it that way.
 ## Installing Arch Linux
 ---
 
-You should probably get this done Tim!
+Will be installing this in EFI mode. So, I'll need to check to make sure the EFI
+directory has files in it.
+
+```sh
+ls /sys/firmware/efi/efivars/
+```
+
+```sh
+ip link
+```
+
+```sh
+ip addr
+```
+
+```sh
+ping 1.1.1.1
+```
+
+If everything is good. Continue.
+
+Check for the disk.
+
+```sh
+fdisk -l
+```
+
+```sh
+Disk /dev/sda: 30 GiB, 32212254720 bytes, 62914560 sectors
+Disk model: VBOX HARDDISK
+Units: sectors or 1 * 512 = 512 bytes
+Sector size (logical/physical): 512 btyes / 512 bytes
+I/O size (minimum/option): 512 bytles / 512 bytes
+```
+
+
+```sh
+fdisk /dev/sda
+```
+
+```sh
+Command (m for help): g
+Created a new GPT disklabel (GUID: AE7700B3-1091-4F26-95FC-AEB7C37EC90).
+```
+
